Fixed css so there's no gap by the ME button

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -61,7 +61,7 @@ html, body {
 }
 
 #personid {
-    height: 30px;
+    height: 28px;
     border: 1px solid white;
     border-right: 1px solid dodgerblue;
     border-radius: 2px 0px 0px 2px; 
